added new p tag

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Added basic structure</h1>
     <h2>Hello</h2>
     <p>How's everything?</p>
+    <p>Going well, how are you?</p>
 </body>
 </html>
