--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Hello</h2>
     <p>How's everything?</p>
     <p>Going well, how are you?</p>
+    <p>Things are going great! How do you like your new class?</p>
 </body>
 </html>
