--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>How's everything?</p>
     <p>Going well, how are you?</p>
     <p>Things are going great! How do you like your new class?</p>
+    <p>It's awesome, just a bit difficult.</p>
 </body>
 </html>
