replied to destiny's message

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>Going well, how are you?</p>
     <p>Things are going great! How do you like your new class?</p>
     <p>It's awesome, just a bit difficult.</p>
+    <p>That's great to hear. Have you tried using emmet?</p>
 </body>
 </html>
