--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>Things are going great! How do you like your new class?</p>
     <p>It's awesome, just a bit difficult.</p>
     <p>That's great to hear. Have you tried using emmet?</p>
+    <p>Not yet.</p>
 </body>
 </html>
