responded to your message again

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <p>It's awesome, just a bit difficult.</p>
     <p>That's great to hear. Have you tried using emmet?</p>
     <p>Not yet.</p>
+    <p>You should it will help typing tags faster.</p>
 </body>
 </html>
