--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <p>That's great to hear. Have you tried using emmet?</p>
     <p>Not yet.</p>
     <p>You should it will help typing tags faster.</p>
+    <p>Can i find out more on w3 schools?</p>
 </body>
 </html>
