--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <p>Not yet.</p>
     <p>You should it will help typing tags faster.</p>
     <p>Can i find out more on w3 schools?</p>
+    <p>Sort of, You might not to be honest. Emmet is a way of programming. Try typing an element such as the a tag without the < and the > then press tab.</p>
 </body>
 </html>
