--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <p>You should it will help typing tags faster.</p>
     <p>Can i find out more on w3 schools?</p>
     <p>Sort of, You might not to be honest. Emmet is a way of programming. Try typing an element such as the a tag without the < and the > then press tab.</p>
+    <p>Nice i'm going to look into it because I'd like to get faster with my typing.</p>
 </body>
 </html>
